[tool.poetry]
name = "torchmanager"
version = "1.3b6"
description = "PyTorch Training Manager v1.3 (Beta 6)"
authors = ["Qisheng He <Qisheng.He@wayne.edu>"]
repository = "https://github.com/kisonho/torchmanager.git"
packages = [
    { include = "torchmanager" },
    { include = "torchmanager_core" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "*"
tqdm = "*"

[tool.poetry.optional-dependencies]
PyYAML = { version = "*" }
scipy = { version = "*" }
tensorboard = { version = "*" }

[tool.poetry.extras]
yaml = ["PyYAML"]
scipy = ["scipy"]
tensorboard = ["tensorboard"]
all = ["PyYAML", "scipy", "tensorboard"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
