[tool.poetry]
name = "torchmanager"
version = "1.4.2"
description = "PyTorch Training Manager v1.4.2"
authors = ["Qisheng He <Qisheng.He@wayne.edu>"]
repository = "https://github.com/kisonho/torchmanager.git"
packages = [
    { include = "torchmanager" },
    { include = "torchmanager_core" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
packaging = ">=16.8"
torch = "*"
tqdm = "*"

[tool.poetry.optional-dependencies]
PyYAML = { version = "*" }
scipy = { version = "*" }
tensorboard = { version = "*" }

[tool.poetry.extras]
yaml = ["PyYAML"]
scipy = ["scipy"]
tensorboard = ["tensorboard"]
all = ["PyYAML", "scipy", "tensorboard"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
